[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
polars = "0.25.1"
petgraph = "0.6"
rustworkx-core = "0.13.2"
simple-pagerank = "0.2.0"

